[package]
name = "odra-codegen"
edition = "2021"
description = "Code generators for Odra IR."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-utils = { path = "../../utils", version = "0.7.0", features = ["std"]  }
odra-ir = { path = "../ir", version = "0.7.0" }
proc-macro2 = "1.0.40"
proc-macro-error = "1.0.4"
quote = "1.0.19"
syn = { version = "1.0.89", features = [ "full" ] }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
convert_case = "0.5.0"
pretty_assertions = "1.3.0"