[package]
name = "odra-ir"
version = "0.4.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Data structures for Odra IR (intermediate representation)."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
proc-macro2 = "1.0.40"
proc-macro-error = "1.0.4"
quote = "1.0.19"
syn = { version = "1.0.89", features = [ "parsing", "full", "visit", "extra-traits", "derive" ] }
itertools = "0.10.3"
anyhow = "1.0.70"
