[package]
name = "odra-ir"
edition = "2021"
description = "Data structures for Odra IR (intermediate representation)."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1.0.40"
proc-macro-error = "1.0.4"
quote = "1.0.19"
syn = { version = "1.0.89", features = [ "parsing", "full", "visit", "extra-traits", "derive" ] }
itertools = "0.10.3"
anyhow = "1.0.70"
odra-utils = { path = "../../utils" }