[package]
name = "odra-proc-macros"
edition = "2021"
description = "Proc macros for Odra-based smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.19"
syn =  { version = "1.0.89", features = ["full", "extra-traits"] }
odra-ir = { path = "../ir" }
odra-codegen = { path = "../codegen" }

[dev-dependencies]
odra = { path = "../../core" }

[lib]
proc-macro = true
