[package]
name = "odra-proc-macros"
edition = "2021"
description = "Proc macros for Odra-based smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.19"
syn =  { version = "1.0.89", features = ["full", "extra-traits"] }
odra-ir = { path = "../ir", version = "0.6.1" }
odra-codegen = { path = "../codegen", version = "0.6.1" }

[dev-dependencies]
odra = { path = "../../core", version = "0.6.1" }

[lib]
proc-macro = true
