[package]
name = "odra-proc-macros"
version = "0.0.1"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Proc macros for Odra-based smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.19"
syn =  { version = "1.0.89", features = ["full", "extra-traits"] }
odra-ir = { path = "../ir" }
odra-codegen = { path = "../codegen" }

[dev-dependencies]
odra = { path = "../../core" }
odra-codegen = { path = "../codegen" }
proc-macro2 = "1.0.40"

[lib]
proc-macro = true
