[package]
name = "odra-proc-macros"
version = "0.2.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Proc macros for Odra-based smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.19"
syn =  { version = "1.0.89", features = ["full", "extra-traits"] }
odra-ir = { version = "0.2.0", path = "../ir" }
odra-codegen = { version = "0.2.0", path = "../codegen" }

[dev-dependencies]
odra = { version = "0.2.0", path = "../../core" }
odra-codegen = { version = "0.2.0", path = "../codegen" }
proc-macro2 = "1.0.40"

[lib]
proc-macro = true
