[package]
name = "odra-mock-vm"
version = "0.3.1"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Odra's virtual machine for running smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
odra-types = { version = "0.3.1", path = "../../types" }
odra-utils = { version = "0.3.1", path = "../../utils" }
odra-mock-vm-types = { version = "0.3.1", path = "../types" }
ref_thread_local = "0.1.1"
anyhow = "1.0.65"
hex = "0.4.3"
colored = "2.0.0"