[package]
name = "odra-mock-vm-types"
edition = "2021"
description = "Types used in Odra's virtual machine."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
odra-types = { path = "../../types" }
hex = "0.4.3"
uint = "0.9.4"
borsh = "0.9.3"
num-traits = "0.2.14"